--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,8 @@
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-select": "^4.3.1",
+    "react-select-country-list": "^2.2.3",
     "web-vitals": "^1.0.1",
     "yarn": "^1.22.11"
   },
