--- a/Server/package.json
+++ b/Server/package.json
@@ -17,5 +17,8 @@
     "express": "^4.17.1",
     "multer": "^1.4.3",
     "mysql": "^2.18.1"
+  },
+  "devDependencies": {
+    "prettier": "^2.4.1"
   }
 }
