--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "demo_db_connection.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "NODE_ENV=test mocha test/**/*.js",
     "start": "node app.js",
     "dev": "nodemon app.js"
   },
@@ -19,6 +19,9 @@
     "mysql": "^2.18.1"
   },
   "devDependencies": {
-    "prettier": "^2.4.1"
+    "chai": "^4.3.4",
+    "mocha": "^9.1.2",
+    "prettier": "^2.4.1",
+    "supertest": "^6.1.6"
   }
 }
