--- a/Frontend/src/package.json
+++ b/Frontend/src/package.json
@@ -7,5 +7,8 @@
   },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "react-scripts": "^4.0.3"
+  }
 }
