--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -8,6 +8,9 @@
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "5.1.0",
     "chai": "^4.3.4",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
+    "jest-react-hooks-shallow": "^1.5.1",
     "js-cookie": "^3.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.6",
@@ -27,7 +30,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --env=jsdom --verbose",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -49,9 +52,7 @@
     ]
   },
   "devDependencies": {
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.6",
-    "jest-react-hooks-shallow": "^1.5.1",
+    "eslint-config-airbnb": "^18.2.1",
     "prettier": "^2.4.1"
   }
 }
