--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -6,13 +6,16 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "apollo-boost": "^0.4.9",
     "bootstrap": "5.1.0",
     "chai": "^4.3.4",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
+    "graphql": "^16.0.1",
     "jest-react-hooks-shallow": "^1.5.1",
     "js-cookie": "^3.0.1",
     "react": "^17.0.2",
+    "react-apollo": "2.2.4",
     "react-bootstrap": "^2.0.0-beta.6",
     "react-bootstrap-icons": "^1.5.0",
     "react-bootstrap-typeahead": "^5.2.0",
